--- a/css/style.css
+++ b/css/style.css
@@ -195,30 +195,7 @@ header .introduction p {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/**  Contact Page **/
+/**  Page **/
 .page {
   padding: 50px 0;
 }
@@ -228,72 +205,6 @@ header .introduction p {
   text-align: center;
   margin-bottom: 30px;
 }
-
-/**  Page -- Mission **/
-#mission {
-  background-color: #E4D29D;
-  background-image: linear-gradient(to bottom, #EEF08A, #819A2D);
-  border-top: 20px solid rgba(238, 200, 86, .5);
-}
-
-
-
-
-
-
-
-
-
-
-
-/**  Page -- Services **/
-
-.service {
-  margin: 20px 0;
-  text-align: center;
-}
-
-#services img.icon {
-  display: block;
-  width: 80px;
-  margin: 0 auto;
-  margin-bottom: 5px;
-}
-
-#services h3 {
-
-  margin-bottom: 10px;
-}
-
-@media only screen 
-and (min-width: 450px)
-and (max-width: 768px) {
-  .service p {
-    padding: 0 20%;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -359,22 +270,6 @@ and (max-width: 768px) {
   right: 0;
   z-index: 1;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
