Omit portrait on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,9 @@ header .introduction p {
   background: url(../wp/train.jpg) no-repeat center center;
   background-size: cover;
 }
+.elim {
+  display: none;
+}
 
 /**
 .about_text_adjustment {
