--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 100;
   margin: 0;
 }
+#h3Title {
+  text-align: center;
+  color: #FFD953;
+}
 
 @media all and (max-width: 2560px) { /* screen size until 1200px */
     body {
