increased load speed

--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ header .introduction p {
   width: 100%;
 }
 .halfPicture{
-  background: url(../resources/train.jpg) no-repeat center center;
+  background: url(../resources/candidate.jpg) no-repeat center center;
   background-size: cover;
 
 }
