--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
+.about_text a {
+    color: #FFD953; !important;
+}
 
 /**  Header Navigation **/
 
@@ -460,11 +463,40 @@ header .introduction p {
 }
 
 
+.thumb {
+    margin-bottom: 30px;
+}
+.proj-thumbnails {
+
+  border-radius: 55px;
+}
 
 
+.featureproj {
+    display: block;
+    width: 100%;
+    margin: 0;
+}
 
+.author {
+    font-style: italic;
+    line-height: 1.3;
+    color: #aab6aa;
+}
 
+.blog-stripe .block-title {
+    background: black;
+    width: 100%;
+    color: white;
+    height: 100px;
+    padding-top: 20px;
+}
 
+.all-blogs .media {
+    margin-left: -40px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #CCCCCC;
+}
 
 
 
